--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "wed",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeshM/Guest-list-approval-by-sms.git"
+  },
+  "license": "MIT",
   "scripts": {
     "start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app.js"
   },
@@ -13,11 +18,12 @@
     "express-domain-middleware": "0.1.0",
     "google-auth-library": "0.10.0",
     "googleapis": "20.1.0",
-    "moment": "2.18.1",
+    "moment": "2.21.0",
     "mongoose": "4.11.5",
     "morgan": "1.8.2",
     "phone": "1.0.10",
     "q": "1.5.0",
+    "request": "^2.85.0",
     "serve-favicon": "2.4.3",
     "simple-nexmo": "2.2.1"
   }
